--- a/backend/composer.json
+++ b/backend/composer.json
@@ -19,7 +19,8 @@
         "phalapi/kernal": "2.2.*",
         "phalapi/qrcode": "dev-master",
         "phalapi/task": "dev-master",
-        "phalapi/gtcode": "dev-master"
+        "phalapi/gtcode": "dev-master",
+        "phalapi/jwt": "dev-master"
     },
     "autoload": {
         "files": [
