--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "echarts": "^4.2.0-rc.1",
     "vue": "^2.5.17",
+    "vue-carousel": "^0.14.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
