--- a/management/package.json
+++ b/management/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "新版本小红帽的后台系统",
   "author": "todo",
-  "license": "none",
+  "private": true,
   "scripts": {
     "dev": "cross-env BABEL_ENV=development webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "build:prod": "cross-env NODE_ENV=production env_config=prod node build/build.js",
