增加各院的总时长 准备开始日小程序

--- a/miniapp/app.json
+++ b/miniapp/app.json
@@ -1,8 +1,9 @@
 {
     "pages": [
+        "pages/timelong/timelong",
         "pages/index/index",
-        "pages/logs/logs",
-        "pages/timelong/timelong"
+        "pages/logs/logs"
+
     ],
     "window": {
         "backgroundTextStyle": "light",
