改了一下界面,新增信息修改块,假装有接口

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "echarts": "^4.2.0-rc.1",
     "vue": "^2.5.17",
     "vue-carousel": "^0.14.0",
