--- a/management/package.json
+++ b/management/package.json
@@ -46,6 +46,7 @@
     "xlsx": "^0.11.16"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.0.0",
     "autoprefixer": "8.5.0",
     "babel-core": "6.26.3",
     "babel-helper-vue-jsx-merge-props": "2.0.3",
