--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "echarts": "^4.2.0-rc.1",
     "vue": "^2.5.17",
     "vue-carousel": "^0.14.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
