--- a/management/package.json
+++ b/management/package.json
@@ -27,8 +27,10 @@
     "element-ui": "2.4.6",
     "file-saver": "1.3.8",
     "font-awesome": "4.7.0",
+    "html2canvas": "^1.0.0-alpha.12",
     "js-cookie": "2.2.0",
     "jsonlint": "1.6.3",
+    "jspdf": "^1.4.1",
     "jszip": "3.1.5",
     "mockjs": "1.0.1-beta3",
     "normalize.css": "7.0.0",
