--- a/miniapp/app.json
+++ b/miniapp/app.json
@@ -1,14 +1,14 @@
 {
-    "pages": [
-        "pages/timelong/timelong",
-        "pages/index/index",
-        "pages/logs/logs"
-
-    ],
-    "window": {
-        "backgroundTextStyle": "light",
-        "navigationBarBackgroundColor": "#fff",
-        "navigationBarTitleText": "WeChat",
-        "navigationBarTextStyle": "black"
-    }
+  "pages": [
+    "pages/joins/joins",
+    "pages/timelong/timelong",
+    "pages/index/index",
+    "pages/logs/logs"
+  ],
+  "window": {
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "#fff",
+    "navigationBarTitleText": "WeChat",
+    "navigationBarTextStyle": "black"
+  }
 }
