--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -20,7 +20,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  dio: ^1.0.6
+  json_annotation: ^2.0.0
+  
 dev_dependencies:
+  json_serializable: ^2.0.0
+  build_runner: ^1.1.2
+  
   flutter_test:
     sdk: flutter
 
